hw3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthapp-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: healthapp
  template:
    metadata:
      labels:
        app: healthapp
    spec:
      containers:
      - name: healthapp
        image: docker.io/andytakker/ma2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
