hw3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthapp-service
spec:
  selector:
    app: healthapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
